<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">时间同步</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">设置</string>


    <string name="settings_server">自定义NTP服务</string>
    <string name="settings_overtime">超时设置</string>

    <string name="settings_time_depart">设置同步时间</string>
    <string name="settings_reset">恢复设置</string>
    <string name="settings_about">关于</string>

    <string name="choose">确定</string>
    <string name="cancel">取消</string>

    <string name="action_sync">同步</string>
    <string name="update">更新</string>
    <string name="atomic_time">标准时间:</string>
    <string name="system_time">本机时间:</string>
    <string name="offset">时间差:</string>
    <string name="date">日期:</string>
    <string name="ntp_setting">NTP设置</string>
    <string name="server_setting">NTP服务器设置</string>
    <string name="overtime_setting">超时设置</string>
    <string name="themes_setting">主题</string>
    <string name="wait">正在获取</string>
    <string name="lasttesttime">最近同步:</string>
    <string name="nolasttesttime">没有最近同步时间</string>

    <string name="time_zone">时区</string>
    <string name="dely">延时</string>
    <string name="time_deviton">时间偏差</string>
    <string name="requst_time">请求时刻</string>
    <string name="arrive_time">到达时刻</string>
    <string name="respone_time">响应时刻</string>
    <string name="return_time">返回时刻</string>
    <string name="leap">同步状态</string>
    <string name="version">版本</string>
    <string name="mode">模式</string>
    <string name="precision">精确度</string>
    <string name="type">协议类型</string>
    <string name="poll">轮询时间</string>
    <string name="rootdely">总延时</string>
    <string name="maxdely">最大误差</string>
    <string name="IP">IP</string>
    <string name="close">关闭</string>
    <string name="gps_mode">GPS获时模式</string>
    <string name="other_server">自定义NTP服务器</string>
    <string name="other_time">自定义同步间隔时间</string>

    <string name="other">其他设置</string>
    <string name="auto_sync">自动同步</string>
    <string name="reset">恢复最初设置</string>

    <string name="title">中国科学院国家授时中心为您授时</string>
    <string name="about">关于</string>
    <string name="about_info">本软件中国科学院国家授时中心版权所有！</string>
    <string name="time_depart">时间间隔</string>

</resources>
