<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#384162"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <AnalogClock
            android:id="@+id/ac_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/tile"
            style="@style/main_style"
            android:textSize="23sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ac_clock"
            android:text="@string/title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_atomic"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_atomic_time_tip"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/tip_label"
            android:gravity="center_vertical"
            android:text="@string/atomic_time" />

        <TextView
            android:id="@+id/tv_atomic"
            style="@style/main_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_atomic_time_tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/wait" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_system_time_tip"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/tip_label"
            android:gravity="center_vertical"
            android:text="@string/system_time" />

        <TextView
            android:id="@+id/tv_system"
            style="@style/main_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_system_time_tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_offset_tip"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/tip_label"
            android:gravity="center_vertical"
            android:text="@string/offset" />

        <TextView
            android:id="@+id/tv_offset"
            style="@style/date_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_offset_tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_lasttime_tip"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tip_label"
            android:gravity="center_vertical"
            android:text="@string/lasttesttime" />

        <TextView
            android:id="@+id/tv_lasttime"
            style="@style/date_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_lasttime_tip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
    </RelativeLayout>

</LinearLayout>